--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,16 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to #{title}
+    div.row
+        div.col-sm-1
+            img(src='/images/logo.png', width='80', height='80')
+        div.col-sm-11
+            h1=title
+    hr
+    div.chart
+        div.hidden(id='chart-generic', style='height: 200px')
+    footer
+        span 2015,&nbsp;
+        a(href='https://github.com/DawnAngel/')
+            span Eric Pinto
+
