--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,19 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
-    block content
+html(lang='en')
+    head
+        title= title
+        meta( http-equiv='X-UA-Compatible', content='IE=edge' )
+        meta( name='viewport', content='width=device-width, initial-scale=1.0' )
+        link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css", rel="stylesheet")
+        link(rel='stylesheet', href='//cdnjs.cloudflare.com/ajax/libs/rickshaw/1.5.1/rickshaw.min.css')
+        link(rel='stylesheet', href='/stylesheets/style.css')
+        link(rel='shortcut icon', href='/favicon.png')
+    body
+        block content
+        script(src="https://code.jquery.com/jquery-2.1.4.min.js")
+        script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js")
+        script(src="//cdnjs.cloudflare.com/ajax/libs/numeral.js/1.4.5/numeral.min.js")
+        script(src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js")
+        script(src="//cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js")
+        script(src="//cdnjs.cloudflare.com/ajax/libs/rickshaw/1.5.1/rickshaw.min.js")
+        script(src="/javascripts/app.js")
